--- a/index.html
+++ b/index.html
@@ -1,1 +1,87 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Pages</title>
+</head>
+<body>
+  <button id="btnCopy">复制</button>
+  <div id="ua"></div>
+  <script src="./lib/qrcode.min.js"></script>
+  <script>
+    // event
+    const bindEvent = (node, event, func) => {
+      if (document.all){ 
+      node.attachEvent(`on${event}`, func)//IE中 
+      } else{ 
+        node.addEventListener(event, func, false);//firefox 
+      } 
+    }
+
+    const removeEvent = (node, event, func) => {
+      if (document.all){ 
+      node.detachEvent(`on${event}`, func)//IE中 
+      } else{ 
+        node.removeEventListener(event, func, false);//firefox 
+      } 
+    }
+
+    // copy
+    const copy = (text) => {
+      try {
+        // const copyEvent = new ClipboardEvent('copy', {
+        //   dataType: 'text/plain',
+        //   data: 'text',
+        // });
+        // document.dispatchEvent(copyEvent);
+        bindEvent(document, 'copy', function copyEvent(e) {
+          e.clipboardData.setData('text/plain', text);
+          e.preventDefault();
+        });
+        document.execCommand('copy');
+        removeEvent(document, 'copy', 'copyEvent');
+      } catch (err) {
+        const aux = document.createElement('input');
+        aux.setAttribute('value', text);
+        document.body.appendChild(aux);
+        aux.select();
+        document.execCommand('copy');
+        document.body.removeChild(aux);
+      }
+    }
+
+    const global = {};
+
+    const showQRCode = (data) => {
+      if (!global.qrcode) {
+        const nodeQRCode = document.createElement('div');
+        nodeQRCode.setAttribute('id', 'qrcode');
+        global.qrcode = new QRCode(nodeQRCode, {
+          text: window.navigator.userAgent,
+          width: 128,
+          height: 128,
+          colorDark : "#000000",
+          colorLight : "#ffffff",
+          correctLevel : QRCode.CorrectLevel.H
+        });
+        document.body.appendChild(nodeQRCode);
+      } else {
+        global.qrcode.clear();
+        global.qrcode.makeCode(data);
+      }
+      
+    }
+
+    // copy
+    const nodeUA = document.querySelector('#ua');
+    ua.innerText = window.navigator.userAgent;
+    bindEvent(btnCopy, 'click', () => {
+      copy(window.navigator.userAgent);
+      showQRCode(window.navigator.userAgent);
+    });
+
+  </script>
+</body>
+</html>
