--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,5 @@
 <body>
   <button id="btnCopy">复制</button>
   <div id="ua"></div>
-<script type="text/javascript" src="app.baf7a1878e9c31c379cd.bundle.js"></script></body>
+</body>
 </html>
