add scss, clean js code

--- a/index.html
+++ b/index.html
@@ -5,9 +5,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Pages</title>
-</head>
+<link href="./dist/app.c85d35c63da5e0d356796ba7725e6c49.css" rel="stylesheet"></head>
 <body>
-  <button id="btnCopy">复制</button>
-  <div id="ua"></div>
-<script type="text/javascript" src="app.baf7a1878e9c31c379cd.bundle.js"></script></body>
+  <div class="cell">
+    <div class="cell-title">User-Agent</div>
+    <div class="cell-body">
+      <div class="cell-hd"></div>
+      <div class="cell-primary">
+        <div id="node_UA"></div>
+      </div>
+      <div class="cell-ft">
+        <button id="btnCopy_UA">复制</button>        
+      </div>
+    </div>
+  </div>
+  <div class="cell">
+    <div class="cell-title">Cookie</div>
+    <div class="cell-body">
+      <div class="cell-hd"></div>
+      <div class="cell-primary">
+        <div id="node_COOKIE"></div>
+      </div>
+      <div class="cell-ft">
+        <button id="btnCopy_COOKIE">复制</button>        
+      </div>
+    </div>
+  </div>
+<script type="text/javascript" src="./dist/app.d245afe41b5af79d5616.bundle.js"></script></body>
 </html>
