--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,29 @@
   <title>Pages</title>
 </head>
 <body>
-  <button id="btnCopy">复制</button>
-  <div id="ua"></div>
+  <div class="cell">
+    <div class="cell-title">User-Agent</div>
+    <div class="cell-body">
+      <div class="cell-hd"></div>
+      <div class="cell-primary">
+        <div id="node_UA"></div>
+      </div>
+      <div class="cell-ft">
+        <button id="btnCopy_UA">复制</button>        
+      </div>
+    </div>
+  </div>
+  <div class="cell">
+    <div class="cell-title">Cookie</div>
+    <div class="cell-body">
+      <div class="cell-hd"></div>
+      <div class="cell-primary">
+        <div id="node_COOKIE"></div>
+      </div>
+      <div class="cell-ft">
+        <button id="btnCopy_COOKIE">复制</button>        
+      </div>
+    </div>
+  </div>
 </body>
 </html>
