update href & styles

--- a/src/index.html
+++ b/src/index.html
@@ -15,19 +15,19 @@
         <div id="node_UA"></div>
       </div>
       <div class="cell-ft">
-        <button id="btnCopy_UA">复制</button>        
+        <button id="btnCopy_UA">复制</button>
       </div>
     </div>
   </div>
   <div class="cell">
-    <div class="cell-title">Cookie</div>
+    <div class="cell-title">Href</div>
     <div class="cell-body">
       <div class="cell-hd"></div>
       <div class="cell-primary">
-        <div id="node_COOKIE"></div>
+        <div id="node_HREF"></div>
       </div>
       <div class="cell-ft">
-        <button id="btnCopy_COOKIE">复制</button>        
+        <button id="btnCopy_HREF">复制</button>
       </div>
     </div>
   </div>
