--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Pages</title>
-<link href="./dist/app.c85d35c63da5e0d356796ba7725e6c49.css" rel="stylesheet"></head>
+<link href="./dist/app.2050a014120075f08a18a22ce1961627.css" rel="stylesheet"></head>
 <body>
   <div class="cell">
     <div class="cell-title">User-Agent</div>
@@ -15,21 +15,21 @@
         <div id="node_UA"></div>
       </div>
       <div class="cell-ft">
-        <button id="btnCopy_UA">复制</button>        
+        <button id="btnCopy_UA">复制</button>
       </div>
     </div>
   </div>
   <div class="cell">
-    <div class="cell-title">Cookie</div>
+    <div class="cell-title">Href</div>
     <div class="cell-body">
       <div class="cell-hd"></div>
       <div class="cell-primary">
-        <div id="node_COOKIE"></div>
+        <div id="node_HREF"></div>
       </div>
       <div class="cell-ft">
-        <button id="btnCopy_COOKIE">复制</button>        
+        <button id="btnCopy_HREF">复制</button>
       </div>
     </div>
   </div>
-<script type="text/javascript" src="./dist/app.d245afe41b5af79d5616.bundle.js"></script></body>
+<script type="text/javascript" src="./dist/app.b7f0dd5ef36389774d44.bundle.js"></script></body>
 </html>
