--- a/src/index.html
+++ b/src/index.html
@@ -20,14 +20,17 @@
     </div>
   </div>
   <div class="cell">
-    <div class="cell-title">Cookie</div>
+    <div class="cell-title">BEEF-URL</div>
     <div class="cell-body">
       <div class="cell-hd"></div>
       <div class="cell-primary">
-        <div id="node_COOKIE"></div>
+        <input type="text" id="burl_oid" placeholder="burl_oid">        
+        <input type="text" id="burl_prefix" placeholder="burl_prefix">
+        <input type="text" id="burl_salt" placeholder="burl_salt">
+        <div id="node_BURL"></div>
       </div>
       <div class="cell-ft">
-        <button id="btnCopy_COOKIE">复制</button>        
+        <button id="btnCopy_BURL">复制</button>        
       </div>
     </div>
   </div>
